--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,7 @@
       <h1 class="text-4xl text-center font-bold text-gray-800 tracking-tight">Create New Account</h1>
       <form action="/register" class="mt-6" method="post">
         <input class="border rounded-lg w-full px-4 py-2 mt-3 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent" type="text" name="username" placeholder="Username">
+        <input class="border rounded-lg w-full px-4 py-2 mt-3 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent" type="text" name="fullname" placeholder="Full Name">
         <input class="border rounded-lg w-full px-4 py-2 mt-3 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent" type="email" name="email" placeholder="Email">
         <input class="border rounded-lg w-full px-4 py-2 mt-3 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent" type="number" name="contact" placeholder="Contact Number">
         <input class="border rounded-lg w-full px-4 py-2 mt-3 focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent" type="password" name="password" placeholder="Password">
@@ -17,3 +18,4 @@
   </div>
 
   <% include ('./partials/footer') %> 
+
